[package]
name = "quiren"
version = "0.2.0"
edition = "2018"
description = "Quick editor rename tool, for files and directories"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edit = "0.1.3"
osstrtools = "0.2"
thiserror = "1"
main_error = "0.1.1"
pico-args = "0.4.2"
question = "0.2.2"

